--- a/SemanticAgents/SemanticAgents/SemanticAgents.csproj
+++ b/SemanticAgents/SemanticAgents/SemanticAgents.csproj
@@ -17,6 +17,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SemanticAgents.Client\SemanticAgents.Client.csproj" />
+    <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.4.0" />
+    <PackageReference Include="Azure.Identity" Version="1.17.1" />
+    <PackageReference Include="Azure.Security.KeyVault.Administration" Version="4.6.0" />
+    <PackageReference Include="Azure.Security.KeyVault.Keys" Version="4.8.0" />
+    <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.11" />
     <PackageReference Include="Microsoft.Extensions.AI" Version="10.1.1" />
     <PackageReference Include="Microsoft.Extensions.AI.Abstractions" Version="10.1.1" />
